--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-cli",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "CLI for interacting with Notion Brain System",
   "main": "index.js",
   "bin": {
@@ -9,14 +9,21 @@
   "scripts": {
     "test": "node bin/brain.js --help"
   },
-  "keywords": ["notion", "brain", "knowledge", "tasks", "cli"],
+  "keywords": [
+    "notion",
+    "brain",
+    "knowledge",
+    "tasks",
+    "cli"
+  ],
   "author": "Marvin",
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.2",
+    "chrono-node": "^2.7.0",
     "cli-table3": "^0.6.3",
     "commander": "^11.1.0",
-    "ora": "^5.4.1",
-    "chrono-node": "^2.7.0"
+    "fuse.js": "^7.1.0",
+    "ora": "^5.4.1"
   }
 }
