--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-cli",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "CLI for interacting with Notion Brain System",
   "main": "index.js",
   "bin": {
@@ -19,6 +19,7 @@
   "author": "Marvin",
   "license": "MIT",
   "dependencies": {
+    "@tryfabric/martian": "^1.2.4",
     "chalk": "^4.1.2",
     "chrono-node": "^2.7.0",
     "cli-table3": "^0.6.3",
