--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-cli",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "CLI for interacting with Notion Brain System",
   "main": "index.js",
   "bin": {
@@ -14,6 +14,7 @@
     "brain",
     "knowledge",
     "tasks",
+    "reminders",
     "cli"
   ],
   "author": "Marvin",
